@@ -198,14 +198,13 @@ def test_warnings(tmpdir):
                 u, select="name CA", begin=-1, finish=99999
             )
 
-            assert len(record) == 2
+            assert len(record) == 3
             wmsg1 = ("The input begin time (-1 ps) precedes the starting "
                    "trajectory time --- Setting starting frame to 0".format(
                     -1,0))
-            assert str(record[0].message.args[0]) == wmsg1
+            assert str(record[1].message.args[0]) == wmsg1
             wmsg2 = ("The input finish time ({0} ps) occurs after the end of "
                      "the trajectory ({1} ps). Finish time will be set to "
                      "the end of the trajectory".format(
                       99999,1000.0000762939453))
-            assert str(record[1].message.args[0]) == wmsg2
-
+            assert str(record[2].message.args[0]) == wmsg2
